electron-dock/mx-auto-server/deploy/k8s/internal/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mx-auto
  labels:
    app.kubernetes.io/part-of: mx-auto
